# parser-generator

./: .gitignore  lab4.cabal  regen.ps1  sample.dot
SOURCES/: Parser.txt  Utils.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.1/: lab4-0.1.0.0-inplace.conf  package.cache
examples/calculator/: Grammar.hs  Lexer.txt  Parser.txt
examples/lab2/: Grammar.hs  Lexer.txt  Parser.txt
examples/lab3/: Grammar.hs  Lexer.txt  Parser.txt
grammar/: Grammar.hs  Lexer.txt  Parser.txt
parser/: Graph.hs  Main.hs
src/Grammar/: Grammar.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y
src/Parsing/: Grammar.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y
